maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: too many arguments for method droite: ()Unit
										droite(3)
                                                                                      ^